--- a/output/matrix_mult_Jared.dSYM/Contents/Resources/Relocations/aarch64/matrix_mult_Jared.yml
+++ b/output/matrix_mult_Jared.dSYM/Contents/Resources/Relocations/aarch64/matrix_mult_Jared.yml
@@ -2,12 +2,13 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/berkatik/Desktop/Courses/CMSE822 - Parallel computing/Assignments/project-1-team-8/output/matrix_mult_Jared'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _get_walltime_, symObjAddr: 0x0, symBinAddr: 0x100003780, symSize: 0x58 }
-  - { offsetInCU: 0x5A, offset: 0x5A, size: 0x8, addend: 0x0, symName: _get_walltime_, symObjAddr: 0x0, symBinAddr: 0x100003780, symSize: 0x58 }
-  - { offsetInCU: 0x8C, offset: 0x8C, size: 0x8, addend: 0x0, symName: _get_walltime, symObjAddr: 0x58, symBinAddr: 0x1000037D8, symSize: 0x24 }
-  - { offsetInCU: 0xB0, offset: 0xB0, size: 0x8, addend: 0x0, symName: _generate_matrix, symObjAddr: 0x7C, symBinAddr: 0x1000037FC, symSize: 0x114 }
-  - { offsetInCU: 0x13A, offset: 0x13A, size: 0x8, addend: 0x0, symName: _print_matrix, symObjAddr: 0x190, symBinAddr: 0x100003910, symSize: 0xC0 }
-  - { offsetInCU: 0x1A4, offset: 0x1A4, size: 0x8, addend: 0x0, symName: _free_matrix_memory, symObjAddr: 0x250, symBinAddr: 0x1000039D0, symSize: 0xA4 }
-  - { offsetInCU: 0x20E, offset: 0x20E, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x2F4, symBinAddr: 0x100003A74, symSize: 0x2CC }
-  - { offsetInCU: 0x338, offset: 0x338, size: 0x8, addend: 0x0, symName: _multiply_matrices, symObjAddr: 0x5C0, symBinAddr: 0x100003D40, symSize: 0x104 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _get_walltime_, symObjAddr: 0x0, symBinAddr: 0x1000036DC, symSize: 0x58 }
+  - { offsetInCU: 0x5A, offset: 0x5A, size: 0x8, addend: 0x0, symName: _get_walltime_, symObjAddr: 0x0, symBinAddr: 0x1000036DC, symSize: 0x58 }
+  - { offsetInCU: 0x8C, offset: 0x8C, size: 0x8, addend: 0x0, symName: _get_walltime, symObjAddr: 0x58, symBinAddr: 0x100003734, symSize: 0x24 }
+  - { offsetInCU: 0xB0, offset: 0xB0, size: 0x8, addend: 0x0, symName: _generate_matrix, symObjAddr: 0x7C, symBinAddr: 0x100003758, symSize: 0x114 }
+  - { offsetInCU: 0x13A, offset: 0x13A, size: 0x8, addend: 0x0, symName: _generate_offset_matrix, symObjAddr: 0x190, symBinAddr: 0x10000386C, symSize: 0xF4 }
+  - { offsetInCU: 0x1D2, offset: 0x1D2, size: 0x8, addend: 0x0, symName: _print_matrix, symObjAddr: 0x284, symBinAddr: 0x100003960, symSize: 0xC0 }
+  - { offsetInCU: 0x23C, offset: 0x23C, size: 0x8, addend: 0x0, symName: _free_matrix_memory, symObjAddr: 0x344, symBinAddr: 0x100003A20, symSize: 0x40 }
+  - { offsetInCU: 0x28A, offset: 0x28A, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x384, symBinAddr: 0x100003A60, symSize: 0x2CC }
+  - { offsetInCU: 0x3B4, offset: 0x3B4, size: 0x8, addend: 0x0, symName: _multiply_matrices, symObjAddr: 0x650, symBinAddr: 0x100003D2C, symSize: 0x128 }
 ...
